[gd_scene load_steps=10 format=2]

[ext_resource path="res://title_screen/Buttons/StartGameButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://title_screen/Buttons/OptionsButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://title_screen/Buttons/ExitButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://title_screen/mainscreen.png" type="Texture" id=4]
[ext_resource path="res://title_screen/TitleScreen.gd" type="Script" id=5]
[ext_resource path="res://title_screen/FadeIn.gd" type="Script" id=6]
[ext_resource path="res://title_screen/Buttons/Milestones.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 984.0
margin_bottom = 400.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 404.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_vertical = 3
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 984.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 2

[node name="StartGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 1 )]
margin_top = 6.0
margin_right = 984.0
margin_bottom = 36.0
action_mode = 0
flat = false

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 46.0
margin_right = 984.0
margin_bottom = 76.0
flat = false

[node name="Label" parent="Menu/CenterRow/Buttons/OptionsButton" index="0"]
align = 1
valign = 1

[node name="MilestonesButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 7 )]
margin_top = 86.0
margin_right = 984.0
margin_bottom = 116.0
flat = false

[node name="Label" parent="Menu/CenterRow/Buttons/MilestonesButton" index="0"]
align = 1
valign = 1

[node name="ExitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 126.0
margin_right = 984.0
margin_bottom = 156.0
flat = false

[node name="Label" parent="Menu/CenterRow/Buttons/ExitButton" index="0"]
align = 1
valign = 1

[node name="FadeIn" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeIn"]
anims/RESET = SubResource( 1 )
anims/fade_in = SubResource( 2 )

[connection signal="button_down" from="Menu/CenterRow/Buttons/StartGameButton" to="." method="_on_StartGameButton_button_down"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/MilestonesButton" to="." method="_on_MilestonesButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
[connection signal="animation_finished" from="FadeIn/AnimationPlayer" to="FadeIn" method="_on_AnimationPlayer_animation_finished"]

[editable path="Menu/CenterRow/Buttons/OptionsButton"]
[editable path="Menu/CenterRow/Buttons/MilestonesButton"]
[editable path="Menu/CenterRow/Buttons/ExitButton"]
